# freezer-control

./: .gitignore  CMakeLists.txt  CMakeSettings.json  hidworker.cpp  hidworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  temperaturelogger.cpp  temperaturelogger.h
